--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@tailwindcss/typography": "^0.5.2",
     "autoprefixer": "^10",
     "core-js": "^3.8.3",
+    "jwt-decode": "^4.0.0",
     "postcss": "^8",
     "tailwindcss": "^3",
     "vue": "^2.7.16",
