feat: reset with vue3

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-VUE_APP_SARA_INTE_HOST=https://web-tech.tw/sara
-VUE_APP_SARA_TOKEN_NAME=unified_token
+VITE_HOME_INTE_HOST=https://web-tech.tw
+
+VITE_SARA_INTE_HOST=https://web-tech.tw/sara
+VITE_SARA_TOKEN_NAME=unified_token
