--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,12 +12,14 @@ jobs:
       - name: Specific Node.js version 🦄
         uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 20
 
       - name: Checkout 🛎️
         uses: actions/checkout@v4
 
       - name: Install and Build 📎
+        env:
+          BASE_URL: ${{ vars.BASE_URL }}
         run: |
           npm install
           npm run build
