--- a/package.json
+++ b/package.json
@@ -1,53 +1,44 @@
 {
   "name": "index",
-  "version": "0.1.0",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "lint": "lint-staged",
+    "lint:es": "eslint \"*.{js,vue}\" \"src/**/*.{js,vue}\"",
+    "lint:es:fix": "eslint \"*.{js,vue}\" \"src/**/*.{js,vue}\" --fix",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "*.{js,vue}": "eslint"
   },
   "dependencies": {
-    "@tailwindcss/typography": "^0.5.2",
-    "autoprefixer": "^10",
-    "core-js": "^3.8.3",
+    "@heroicons/vue": "^2.0.18",
     "jwt-decode": "^4.0.0",
-    "postcss": "^8",
-    "tailwindcss": "^3",
-    "vue": "^2.7.16",
-    "vue-router": "^3.5.1"
+    "vue": "^3.5.12",
+    "vue-router": "^4.2.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-plugin-router": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
-    "axios": "^1.7.7",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
-    "vue-cli-plugin-axios-x": "~0.2.6",
-    "vue-cli-plugin-tailwind": "~3.0.0",
-    "vue-template-compiler": "^2.7.16"
+    "@commitlint/cli": "^17.4.4",
+    "@commitlint/config-conventional": "^17.4.4",
+    "@tailwindcss/typography": "^0.5.15",
+    "@vitejs/plugin-vue": "^4.2.3",
+    "autoprefixer": "^10.4.15",
+    "cz-conventional-changelog": "^3.3.0",
+    "eslint": "^9.12.0",
+    "eslint-plugin-vue": "^9.29.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^15.2.10",
+    "postcss": "^8.4.29",
+    "tailwindcss": "^3.3.3",
+    "vite": "^4.4.5"
   },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "@babel/eslint-parser"
-    },
-    "rules": {}
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
-  ]
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  }
 }
