--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "autoprefixer": "^10.4.15",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^9.12.0",
+    "eslint-config-nymph": "^0.15.0",
+    "eslint-plugin-jsdoc": "^50.4.3",
     "eslint-plugin-vue": "^9.29.0",
     "husky": "^8.0.3",
     "lint-staged": "^15.2.10",
