--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,32 +5,39 @@ on:
     branches:
       - main
 
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
+
 jobs:
-  build-and-deploy:
+  build-and-push-image:
+    name: Build and publish a Docker image
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+
     steps:
-      - name: Specific Node.js version 🦄
-        uses: actions/setup-node@v3
+      - name: Checkout repository
+        uses: actions/checkout@v5
+
+      - name: Log in to the Container registry
+        uses: docker/login-action@v3
         with:
-          node-version: 20
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Checkout 🛎️
-        uses: actions/checkout@v4
-
-      - name: Install and Build 📎
-        env:
-          BASE_URL: ${{ vars.BASE_URL }}
-        run: |
-          npm install
-          npm run build
-
-      - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@v4
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v5
         with:
-          branch: dist-pages
-          folder: dist
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
-      - name: Webhook 📲
-        uses: wei/curl@master
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v6
         with:
-          args: ${{ vars.DEPLOY_WEBHOOK_URL }}?secret=${{ secrets.DEPLOY_WEBHOOK_SECRET }}
+          context: .
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
