--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/content": "^3.8.0",
     "@nuxt/eslint": "1.10.0",
     "@nuxt/image": "2.0.0",
     "@nuxt/scripts": "0.13.0",
     "@nuxt/test-utils": "3.20.1",
     "@nuxt/ui": "4.1.0",
     "@unhead/vue": "^2.0.3",
+    "better-sqlite3": "^12.4.1",
     "eslint": "^9.0.0",
     "jwt-decode": "^4.0.0",
     "ky": "^1.7.2",
